# bostrom-mcp

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  release.sh  server.json  test-all.mjs
agent-prompts/: green-cycle.md  system.md
rust/: Cargo.toml
rust/src/: main.rs  server.rs
rust/src/clients/: signing.rs
rust/src/tools/: mod.rs
src/: index.ts  util.ts
src/clients/: signing.ts
src/services/: lithium-write.ts  lithium.ts
src/tools/: lithium-write.ts  lithium.ts
